<resources>
    <string name="app_name">DietDoctor</string>
    <string name="start">スタート</string>
    <string name="background">背景</string>
    <string name="icon">アイコン</string>
    <string name="star">スター</string>
    <string name="medal">メダル</string>
    <string name="achievement">達成度</string>
    <string name="select">選択</string>
    <string name="scene">シーン</string>
    <string name="memo">メモ</string>
    <string name="done">完了</string>
    <string name="not_doing">未完</string>
    <string name="bronze">BRONZE</string>
    <string name="silver">SILVER</string>
    <string name="gold">GOLD</string>
    <string name="master">MASTER</string>
    <string name="send">送信</string>
    <string name="level">レベル</string>
    <string name="counsel">相談</string>
    <string name="confirmation">確認</string>
    <string name="unread">未読</string>
    <string name="list">一覧</string>
    <string name="categorized">項目別</string>
    <string name="close">閉じる</string>
    <string name="action">行動</string>
    <string name="consideration">注意事項</string>
    <string name="next">次へ</string>
    <string name="prev">戻る</string>
    <string name="user_name">ユーザ名</string>
    <string name="password">パスワード</string>
    <string name="mail_address">メールアドレス</string>
    <string name="gender">性別</string>
    <string name="birthday">生年月日</string>
    <string name="height">身長</string>
    <string name="weight">体重</string>
    <string name="occupation">職業</string>
    <string name="exercising">運動</string>
    <string name="meal">食事</string>
    <string name="exercising_vertical">運\n動</string>
    <string name="meal_vertical">食\n事</string>
    <string name="exercising_custom">運動習慣</string>
    <string name="meal_custom">食事習慣</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="times">倍</string>
    <string name="register">登録</string>
    <string name="new_account">新規登録</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="calendar">カレンダー</string>
    <string name="graph">グラフ</string>
    <string name="history">履歴</string>
    <string name="purchase">購入</string>
    <string name="search">検索</string>
    <string name="bmi">BMI</string>
    <string name="ranking">ランキング</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="cancel">キャンセル</string>
    <string name="ok">OK</string>
    <string name="news">New</string>
    <string name="update">更新</string>
    <string name="reset_password">パスワードを忘れてしまった場合は、ここをタップしてリセットしてください。\n登録されているメールアドレスに、リセット用のURLなどの情報が送られます。</string>
    <string name="email_not_found">メールアドレスが登録されていません。</string>
    <string name="reset_mail_send">リセット用のURLを含んだメールを送信しますので、しばらくしたら、確認してください。</string>
    <string name="cannot_reset">リセット処理ができませんでした。しばらくしてから、もう一度試してみてください。</string>
    <string name="user_exist">ユーザ名(%1s)はすでに使用されています。</string>
    <string name="star_count">☆数</string>
    <string name="weight_of_today">今日の体重</string>
    <string name="login_title">ログイン</string>
    <string name="welcome_title">ようこそ！</string>
    <string name="message_title">DietNews</string>
    <string name="record_title">記録</string>
    <string name="information_title">情報</string>
    <string name="contact_title">DDクリニック</string>
    <string name="ticket_title">相談チケット</string>
    <string name="goal_title">目標設定</string>
    <string name="diet_action_title">減量行動</string>
    <string name="select_level_title">挑戦するレベル</string>
    <string name="entry_title">記録</string>
    <string name="achievement_title">目標達成状況</string>
    <string name="term_w1">1週間</string>
    <string name="term_m1">1ヶ月</string>
    <string name="term_m3">3ヶ月</string>
    <string name="initial_weight">体重初期値</string>
    <string name="ticket_caption_1">相談チケット × 1枚</string>
    <string name="ticket_caption_5">相談チケット × 5枚</string>
    <string name="ticket_caption_10">相談チケット × 10枚</string>
    <string name="ticket_caption_30">相談チケット × 30枚</string>
    <string name="ticket_caption_50">相談チケット × 50枚</string>
    <string name="ticket_price">価格</string>
    <string name="ticket_price_1">¥500</string>
    <string name="ticket_price_5">¥2000</string>
    <string name="ticket_price_10">¥5000</string>
    <string name="ticket_price_30">¥10000</string>
    <string name="ticket_price_50">¥20000</string>
    <string name="come">※</string>
    <string name="ticket_description_1">相談の回答は、約一日で参ります。登録情報、相談内容に基づいて医師が回答します。</string>
    <string name="ticket_description_2">原則、一回の相談で、相談内容は一つとして下さい。複数の相談をされた場合、全てにはお答えしかねる場合がありますのでご了承下さい。</string>
    <string name="ticket_description_3">一枚チケットの相談につき最大3往復まで医師とやりとりができます。</string>
    <string name="choose_this_action">この減量行動を見る</string>
    <string name="choose_this_level">このレベルに設定する</string>
    <string name="qualification">        本アプリケーションはダイエット行動の促進とダイエットを中心とする健康情報の提供を目的としており、診療行為又はこれに準ずる行為を目的として利用することはできません。\nお客様はこのことを十分認識した上で自己の責任において本アプリケーションを利用し、必要ならば適切な医療機関の受診等、自身の判断で行ってください。</string>
    <string name="introduction_title_0">「ダイエット・ドクター」のダイエット法</string>
    <string name="introduction_title_1">「ダイエット・ドクター」にようこそ！</string>
    <string name="login_description1">既に、このサービスを利用している方は、登録しているユーザ名とパスワードでログインしてください。</string>
    <string name="login_description2">初めての方は、新規登録でユーザ情報を登録してください。</string>
    <string name="register_title">ユーザ情報登録</string>
    <string name="register_description1">希望するユーザ名とパスワードとメールアドレスは必須項目です。</string>
    <string name="register_description3">以下の情報は、ドクターからのアドバイスをする際に使用する基礎情報です。</string>
    <string name="sent_to_server">サーバに送信しました。</string>
    <string name="got_medal">メダル獲得</string>
    <string name="go">Go ▶</string>
    <string name="upgrade">プロ版について</string>
    <string name="hint_weight">今日の体重を入力</string>
    <string name="hint_target_weight">目標体重を入力</string>
    <string name="diet_purpose">減量の目的</string>
    <string name="target_weight">目標体重</string>
    <string name="diet_action">減量行動</string>
    <string name="diet_action_1">減量行動 1</string>
    <string name="diet_action_2">減量行動 2</string>
    <string name="diet_action_3">減量行動 3</string>
    <string name="weight_diff">減量度</string>
    <string name="weight_diff_1">(先週</string>
    <string name="weight_diff_2">kg, 目標まで</string>
    <string name="weight_diff_3">kg)</string>
    <string name="chart_image">レーダーチャート</string>
    <string name="chart_axis_0">ダイエット効果</string>
    <string name="chart_axis_1">取り組みやすさ</string>
    <string name="chart_axis_2">健康度</string>
    <string name="achievement_all_star_caption">総獲得☆数</string>
    <string name="achievement_star_caption">獲得☆数</string>
    <string name="achievement_weight_diff_caption">目標開始からの減量度</string>
    <string name="achievement_pace_caption">達成ペース</string>
    <string name="achievement_pace_prefix">推奨ペース×</string>
    <string name="achievement_pace_suffix">倍</string>
    <string name="percent">%</string>
    <string name="next_level">次のレベルに\n挑戦</string>
    <string name="change_action">項目を\n変える</string>
    <string name="consulting">ドクターに\n相談する</string>
    <string name="caution_ticket_0">相談を送信するために、チケットを１枚消費します。\nよろしいですか？</string>
    <string name="caution_ticket_1">コメントを送信するために、チケットを１枚消費します。\nよろしいですか？</string>
    <string name="upgrade_to_pro">プロ版にアップグレード</string>
    <string name="welcome_prefix">ようこそ！</string>
    <string name="welcome_suffix">さん。</string>
    <string name="achievement_comment">達成時コメント</string>
    <string name="level_prefix">レベル.</string>
    <string name="star_prefix">x</string>
    <string name="bronze_medal">ブロンズ・メダル</string>
    <string name="silver_medal">シルバー・メダル</string>
    <string name="gold_medal">ゴールド・メダル</string>
    <string name="master_medal">マスター・メダル</string>
    <string name="consultation_work">相談(仕事について)</string>
    <string name="consultation_work_0">ほとんど残業している</string>
    <string name="consultation_work_1">時々残業している</string>
    <string name="consultation_work_2">仕事は定時に終わることが多い</string>
    <string name="consultation_meal">相談(食事について\n最も当てはまるものを選択)</string>
    <string name="consultation_meal_0">油ものが好きだ</string>
    <string name="consultation_meal_1">粉ものが好きだ</string>
    <string name="consultation_meal_2">食事時間が不規則だ</string>
    <string name="consultation_meal_3">食事はバランス良く食べられている</string>
    <string name="consultation_exercise">相談(運動について)</string>
    <string name="consultation_exercise_0">定期的に運動している</string>
    <string name="consultation_exercise_1">少し運動している</string>
    <string name="consultation_exercise_2">ほとんど運動していない</string>
    <string name="consultation_snack">相談(間食について)</string>
    <string name="consultation_snack_0">よく間食している</string>
    <string name="consultation_snack_1">時々間食している</string>
    <string name="consultation_snack_2">ほとんど間食しない</string>
    <string name="consultation_drink">相談(飲酒について)</string>
    <string name="consultation_drink_0">よく酒を飲む</string>
    <string name="consultation_drink_1">あまり酒を飲まない</string>
    <string name="consultation_Illness">相談(病気について)</string>
    <string name="consultation_Illness_0">糖尿病</string>
    <string name="consultation_Illness_1">高血圧</string>
    <string name="consultation_Illness_2">高脂血症</string>
    <string name="consultation_Illness_3">腎臓病</string>
    <string name="consultation_Illness_4">心臓病</string>
    <string name="consultation_category">相談項目</string>
    <string name="consultation_subject">件名</string>
    <string name="consultation_content">相談内容</string>
    <string name="buy_ticket">チケットを買う</string>
    <string name="require_consulting">相談をする</string>
    <string name="show_responses">回答を見る</string>
    <string name="num_tickets_prefix">チケット残数</string>
    <string name="num_tickets_suffix">枚</string>
    <string name="consultation_reply_a">A.基礎情報</string>
    <string name="consultation_reply_b">B.現在の習慣</string>
    <string name="consultation_reply_c">C.DD実行状況</string>
    <string name="consultation_reply_d">D.病気との関係</string>
    <string name="consultation_reply_e">E.おススメDIET法</string>
    <string name="dummy_reply_a">基礎情報に基づく、ダイエットに関する回答。これは、自動的にきまるらしい。</string>
    <string name="dummy_reply_b">現在の習慣に基づく、ダイエットに関する回答。これは、自動的にきまるらしい。</string>
    <string name="dummy_reply_c">DD実行状況に基づく、ダイエットに関する回答。これは、自動的にきまるらしい。</string>
    <string name="dummy_reply_d">病気との関係に基づく、ダイエットに関する回答。これは、ちゃんと書くらしい</string>
    <string name="dummy_reply_e">おススメDIET法に関する回答。これは、自動的にきまるらしい。</string>
    <string name="msg_level10">すでに、最高レベルを達成しています。</string>
    <string name="msg_new_tips">今の内容は、ダイエット通信に記事として追加されました。</string>
    <string name="rank_point_prefix">%1$sさんの%2$sは、現在</string>
    <string name="rank_point_suffix">です。</string>
    <string name="rank_point_star">獲得☆数</string>
    <string name="rank_point_rate">減量度</string>
    <string name="rank_point_bmi">BMI</string>
    <string name="ranking_prefix">ランキングは、現在</string>
    <string name="ranking_suffix">位です。(%1$d人中)</string>
    <string name="non_category">その他</string>
    <string name="level_tips_suffix">のTips</string>
    <string name="effectiveness">減量効果</string>
    <string name="achievement_pace">達成ペース</string>
    <string name="rank_order">順位</string>
    <string name="action_item">項目</string>
    <string name="action_title">内容</string>
    <string name="you">あなた</string>
    <string name="similar">似ている人</string>
    <string name="average">全体平均</string>
    <string name="send_successfully">送信しました。</string>
    <string name="send_failed">送信に失敗しました。</string>
    <string name="answer_coming">回答あり</string>
    <string name="information_preferences">ユーザ情報変更</string>
    <string name="information_company_info">会社情報</string>
    <string name="information_terms_of_service">利用規約</string>
    <string name="information_privacy_policy">プライバシーポリシー</string>
    <string name="information_diet_news">ダイエット通信</string>
    <string name="information_ranking">ランキング</string>
    <string name="dummy_title">Title</string>
    <string name="dummy_welcome">ようこそ！hogefugaさん。</string>
    <string name="dummy_date">10/10(木)</string>
    <string name="dummy_star">126</string>
    <string name="history_title">MyPage</string>
</resources>