<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_root"
        >


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <ImageView
                    android:id="@+id/sample_button"
                    android:layout_width="346dp"
                    android:layout_height="114dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/consultation_top"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/contact_title"/>

            <!-- 問診(仕事) -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_work"
                    />

            <RadioGroup
                    android:id="@+id/consultation_work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <RadioButton
                        android:id="@+id/consultation_work_0"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_work_0"
                        />
                <RadioButton
                        android:id="@+id/consultation_work_1"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_work_1"
                        />
                <RadioButton
                        android:id="@+id/consultation_work_2"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_work_2"
                        />
            </RadioGroup>

            <!-- 問診(食事) -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_meal"
                    />
            <RadioGroup
                    android:id="@+id/consultation_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <RadioButton
                        android:id="@+id/consultation_meal_0"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_meal_0"
                        />
                <RadioButton
                        android:id="@+id/consultation_meal_1"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_meal_1"
                        />
                <RadioButton
                        android:id="@+id/consultation_meal_2"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_meal_2"
                        />
                <RadioButton
                        android:id="@+id/consultation_meal_3"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_meal_3"
                        />
            </RadioGroup>

            <!-- 問診(運動) -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_exercise"
                    />
            <RadioGroup
                    android:id="@+id/consultation_exercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <RadioButton
                        android:id="@+id/consultation_exercise_0"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_exercise_0"
                        />
                <RadioButton
                        android:id="@+id/consultation_exercise_1"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_exercise_1"
                        />
                <RadioButton
                        android:id="@+id/consultation_exercise_2"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_exercise_2"
                        />
            </RadioGroup>

            <!-- 問診(間食) -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_snack"
                    />
            <RadioGroup
                    android:id="@+id/consultation_snack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <RadioButton
                        android:id="@+id/consultation_snack_0"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_snack_0"
                        />
                <RadioButton
                        android:id="@+id/consultation_snack_1"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_snack_1"
                        />
                <RadioButton
                        android:id="@+id/consultation_snack_2"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_snack_2"
                        />
            </RadioGroup>

            <!-- 問診(飲酒) -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_drink"
                    />
            <RadioGroup
                    android:id="@+id/consultation_drink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <RadioButton
                        android:id="@+id/consultation_drink_0"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_drink_0"
                        />
                <RadioButton
                        android:id="@+id/consultation_drink_1"
                        style="@style/consultationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultation_drink_1"
                        />
            </RadioGroup>

            <!-- 問診(病気) -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_Illness"
                    />
            <CheckBox
                    android:id="@+id/consultation_Illness_0"
                    style="@style/consultationCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_Illness_0"
                    />
            <CheckBox
                    android:id="@+id/consultation_Illness_1"
                    style="@style/consultationCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_Illness_1"
                    />
            <CheckBox
                    android:id="@+id/consultation_Illness_2"
                    style="@style/consultationCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_Illness_2"
                    />
            <CheckBox
                    android:id="@+id/consultation_Illness_3"
                    style="@style/consultationCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_Illness_3"
                    />
            <CheckBox
                    android:id="@+id/consultation_Illness_4"
                    style="@style/consultationCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_Illness_4"
                    />

            <!-- 相談内容 -->
            <TextView
                    style="@style/headerCaption"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_content"
                    />

            <EditText
                    android:id="@+id/consultation_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/consultation_subject"
                    android:inputType="text"/>
            <EditText
                    android:id="@+id/consultation_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="top"
                    android:lines="3"
                    android:hint="@string/consultation_content"
                    android:textSize="8pt"
                    />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="0dp"
            >
        <TextView
                style="@style/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_tickets_prefix"
                />
        <TextView
                android:id="@+id/num_tickets_text"
                style="@style/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_star"
                android:textColor="@color/highlighted_text"
                />
        <TextView
                style="@style/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_tickets_suffix"
                />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <Button
                android:id="@+id/ticket_button"
                style="@style/standardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy_ticket"
                android:textSize="6pt"
                />
        <Button
                android:id="@+id/require_button"
                style="@style/standardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/require_consulting"
                android:textSize="6pt"
                />
        <Button
                android:id="@+id/response_button"
                style="@style/standardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_responses"
                android:textSize="6pt"
                />
    </LinearLayout>

    <include layout="@layout/main_fragment_footer"/>
</LinearLayout>