<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@color/bg_root"
        android:gravity="center_vertical"
        >
    <TextView
            android:id="@+id/order_text"
            style="@style/headerCaption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/rank_order"
            android:gravity="center"
            />
    <ImageView
            android:id="@+id/action_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:contentDescription="@string/icon"/>
    <TextView
            android:id="@+id/action_level"
            style="@style/actionCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/level"
            android:gravity="center"
            />
    <TextView
            android:id="@+id/action_title"
            style="@style/actionCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/action_title"
            android:gravity="left"
            />
    <TextView
            android:id="@+id/rank_point_text"
            style="@style/actionCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kg"
            android:gravity="right"
            />
</LinearLayout>