<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageView
            android:id="@+id/bg_intro_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_introduction_0"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background"/>

    <ImageView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_left_arrow"
            android:alpha="0.4"
            android:contentDescription="@string/prev"/>

    <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow"
            android:alpha="0.4"
            android:contentDescription="@string/next"/>
</RelativeLayout>
